<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_textview"
            android:layout_marginTop="32dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/signin_with_your_email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_string"
            android:textSize="13sp"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_with_your_email2"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/your_name"
            android:textColorHint="@color/green"
            app:endIconDrawable="@drawable/person_outline"
            app:endIconMode="custom"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinputlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_textinputlayout"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/email"
            android:textColorHint="@color/green"
            app:endIconDrawable="@drawable/email"
            app:endIconMode="custom"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email2"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textinputlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_textinputlayout2"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/password"
            android:textColorHint="@color/green"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reenter_password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_textinputlayout2"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/re_enter_password"
            android:textColorHint="@color/green"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/reenter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reenter_password_textinputlayout"
            android:text="@string/sign_up"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginTop="32dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/continue_background"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/green"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>